--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ width: 100%;
 .page-content {
 position: relative;
 }
-.recent-entries {
+.content-wrap {
 position: absolute;
 position: relative;
 top: 0;
@@ -225,7 +225,8 @@ font-size: .9em;
 .entry-header {
 margin-bottom: 10px;
 }
-.entry-featured .featured-image {
+.entry-featured .featured-image,
+.entry-full .featured-image {
 width: 100%;
 padding-top: 60%; 
 margin-bottom: 20px;
