--- a/style.css
+++ b/style.css
@@ -75,6 +75,32 @@ font-weight: bold;
 #wrap {
 margin-left: 180px;
 }
+
+/* Closing HUD */
+.hud-closed #hud {
+  position: absolute;
+  left:-165px;
+  transition: left .2s linear;
+}
+.hud-closed #wrap {
+  margin-left: 15px;
+  transition: margin-left .2s linear;
+}
+#hud-visibility {
+padding: 4px 12px;
+margin: 10px;
+border-radius: 15px;
+background-color: rgba(0,0,0,.1);
+color: #777;
+cursor: pointer;
+transition: background-color .2s, color .2s;
+}
+#hud-visibility:hover {
+background-color: rgba(0,0,0,.2);
+color: #333;
+}
+
+/* Local Header*/
 .local-header {
 padding-bottom: 2em;
 }
@@ -87,7 +113,7 @@ font-size: 1.2em;
 opacity: .7;
 }
 
-/* WIDTH LOGGER*/
+/* Width Alert */
 #width-logger {
 position: absolute;
 right: 25px;
