--- a/style.css
+++ b/style.css
@@ -184,14 +184,17 @@ color: #fff;
 }
 .fullscreen #layout-tools {
 background: rgba(239,234,232,.95);
-  opacity: 1;
+  opacity: .5;
   z-index: 2;
   position: fixed;
   top: 0;
   right: 0;
   box-shadow: 0 0 5px rgba(0,0,0,.6);  
+  transition: opacity .25s;
 }
-
+.fullscreen #layout-tools:hover {
+  opacity: 1;
+}
 /* Width Alert */
 #width-alert {
 padding: 1px 10px 3px;
@@ -237,7 +240,7 @@ padding: 20px;
 /* - FLUID/FLEXIBLE LAYOUT */
 
 .page-content {
-  padding: 0 320px 0 200px; /* ---> Sidebar width */
+  padding: 0 320px 0 180px; /* ---> Sidebar width */
 }
 .content-wrap,
 .sidebar {
@@ -248,12 +251,12 @@ float: left;
 width: 100%;
 }
 .sidebar {
-width: 180px;
+width: 160px;
 }
 .sidebar-left {
 margin-left: -100%;
-right: 200px;
-  top: 170px;
+right: 180px;
+  top: 150px;
 }
 .sidebar-right {
   width: 300px;
@@ -262,31 +265,41 @@ margin-right: -100%;
 top: -70px;
 }
 
-article, .entry-list-full li, .entry-list-terse, .site-footer, .widget, .site-nav, .site-brand, .site-search {
+article, .entry-list-full li, .entry-list-terse, .site-footer, .widget, .site-nav, .site-search {
    background: rgba(239,234,232,.5);
 }
 
 
 
 /* - HEADER */
-.site-search,
-.site-brand {
+.site-search {
 display: inline-block;
-text-align: center;
-padding: 40px 20px;
 margin-bottom: 20px;
 }
 .site-brand {
   float: left;
-  width: 180px;
-  height: 220px;
+}
+.site-name,.site-logo {text-indent:-999em}
+.site-logo {
+  background: transparent url(i/logo-mark.png) no-repeat center;
+  width: 160px;
+  height: 160px;
+  margin-bottom: 10px;
+}
+.site-name {
+  display:inline-block;
+  background: transparent url(i/logo-words.png);
+  background-size:cover;
+  width: 160px;
+  height: 27px;
+  padding-bottom: 20px;
 }
 
 /* - SITE NAV */
 
 .site-nav {
 padding: 10px;
-margin: 0 320px 20px 200px;
+margin: 0 320px 20px 180px;
 }
 .site-nav li {
 display: inline-block;
