--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ right: 25px;
 top: 25px;
 display: block;
 background: rgba(139,134,132,.2);
-padding: 4px 4px 2px 12px;
+padding: 4px 4px 3px 12px;
 color: #777;
 }
 #photo-toggle, #layout-toggle, #width-alert {
@@ -183,21 +183,23 @@ color: #fff;
 }
 .fullscreen #wrap {
   margin-left: 0;
-  padding: 0;
+  padding: 25px 0 0 0;
 }
 .fullscreen #layout-tools {
-background: rgba(239,234,232,.95);
-  opacity: .5;
+background: rgba(219,214,212,.98);  
   z-index: 2;
   position: fixed;
   top: 0;
-  right: 0;
-  box-shadow: 0 0 5px rgba(0,0,0,.6);  
+  left: 0;
+border-bottom: solid 1px rgba(0,0,0,.1);
   transition: opacity .25s;
+  width: 100%;
+  opacity: .2;
 }
 .fullscreen #layout-tools:hover {
-  opacity: 1;
+opacity: 1;
 }
+
 /* Width Alert */
 #width-alert {
 padding: 1px 10px 3px;
