--- a/style.css
+++ b/style.css
@@ -274,7 +274,13 @@ top: -50px;
    background: rgba(239,234,232,.5);
 }
 
+/* - GLOBAL */
 
+#wrap { 
+ min-width: 768px;
+}
+b, strong { font-weight: bold; }
+i, em { font-style: italic; }
 
 /* - HEADER */
 .site-search {
@@ -290,13 +296,14 @@ margin-bottom: 20px;
   width: 160px;
   height: 160px;
   margin-bottom: 10px;
+  background-size: cover;
 }
 .site-name {
   display:inline-block;
   background: transparent url(i/logo-words.png);
   background-size:cover;
   width: 160px;
-  height: 27px;
+  height: 25px;
   padding-bottom: 20px;
 }
 
@@ -315,7 +322,6 @@ background: rgba(239,234,232,.5);
 /* - SIDEBARS */
 
 .widget {
-font-size: .9em;
 text-align: center;
 padding: 10px 0;
 margin-bottom: 20px;
@@ -371,8 +377,12 @@ float: left;
 }
 
 /* Entry */
+
+.entry-full article {
+  font-size: 1.2em;
+}
 .entry-title {
-font-size: 2em;
+font-size: 1.8em;
 line-height: 1.1;
 font-weight: bold;
 }
@@ -386,19 +396,54 @@ margin-bottom: 10px;
 .entry-full .featured-image {
 margin-bottom: 20px;
 }
-article.entry p,
-article.entry ul {
-  margin-bottom: 1em;
-}
 .featured-image img {
   max-width: 100%;
+}
+
+article.entry p,
+article.entry ul,
+article.entry h3,
+article.entry h4,
+article.entry h5 {
+  margin-bottom: 1em;
+}
+article.entry h3,
+article.entry h4,
+article.entry h5 {
+  font-weight: bold;
 }
 
 /* Recipe */
 
 .recipe-callout {
   clear:both;
+  padding: 20px;
+  margin-bottom: 20px;
+  border: solid 1px rgba(0,0,0,.1);
+  background: rgba(239,234,232,.5);
 }
+.recipe-callout .recipe-title {
+  font-size: 1.3em;
+  font-weight: bold;
+  margin-bottom: .5em;
+}
+.recipe-callout .recipe-intro {
+    font-style: italic;
+    font-size: .9em;
+}
+.recipe-meta li {
+  display: inline-block;
+  margin-right: 2em;
+}
+
+
+
+
+
+
+
+
+
 
 
 /* - OLD LAYOUT */
@@ -410,6 +455,45 @@ article.entry ul {
 
 /* = MEDIA QUERIES */
 
+@media only screen and (max-width: 950px) {
+
+.page-content {
+  padding: 0 320px 0 0; /* ---> Sidebar width */
+}
+.sidebar-left {
+  display: none;
+}
+.sidebar-right {
+top: -125px;
+}
+.site-brand {
+  position: relative;
+  top: -5px;
+}
+.site-logo {
+  float: left;
+  position: relative;
+  left: -3px;
+  width: 84px;
+  height: 84px;
+}
+.site-name {
+  float: left;
+  position: relative;
+  top: 19px;
+  left: 8px;
+  background: transparent url(i/logo-words.png) top left;
+  background-size:cover;
+  width: 323px;
+  height: 52px;
+}
+.site-nav {
+  clear: both;
+  margin: 0 320px 20px 0px;
+}
+
+}
+
 @media only screen and (min-width: 1040px) {
 .fullscreen #wrap {
   max-width: 1040px;
@@ -417,18 +501,31 @@ article.entry ul {
 }
 }
 @media only screen and (min-width: 1350px) {
+
 .fullscreen #wrap {
   max-width: 1350px;
 }
 .entry-featured .featured-image,
 .entry-full .featured-image {
-max-width: 400px;
+max-width: 450px;
 float: left;
 margin: 0 1em 1em 0;
 }
+.recipe-callout .recipe-method {
+  margin-right: 280px;
 }
-@media only screen and (max-width: 768px) {
-.fullscreen #wrap {
+.recipe-callout .recipe-ingredients {
+    float: right;
+    width: 220px;
+    clear: right;
+}
+
+}
+
+
+@media only screen and (max-width: 768px) {   /* ALERT BELOW ACCEPTABLE WIDTH */
+.fullscreen #wrap * {
   background-color: #900;
+  color: #f00;
 }
 }
