--- a/style.css
+++ b/style.css
@@ -435,7 +435,11 @@ article.entry h5 {
   display: inline-block;
   margin-right: 2em;
 }
-
+.recipe-method img {
+  margin-left: 8px;
+  border: solid 1px #fff;
+  
+}
 
 
 
