--- a/style-3col.css
+++ b/style-3col.css
@@ -1,3 +1,5 @@
+/* === Experimental 3 Column Layout */
+
 /* = BASE */
 
 body {
@@ -6,6 +8,14 @@ font: 14px/1.4 "Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
 margin: 0;
 padding: 0;
 }
+
+/* = LAYOUT */
+
+
+
+/* = MODULE */
+
+/* = STATE */
 
 /* = GRID BOXES */
 
@@ -16,6 +26,8 @@ padding: 20px;
 .grid * {
 -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+
+/* = DEMO SHADING */
 
 /* - FLUID/FLEXIBLE LAYOUT */
 
@@ -42,7 +54,7 @@ margin-top: 165px;
   width: 300px;
 left: 20px;
 margin-right: -100%;
-top: -100px;
+top: -50px;
 }
 
 .site-footer, .widget, .site-search {
@@ -68,37 +80,24 @@ margin-bottom: 20px;
 .site-name,.site-logo {text-indent:-999em}
 .site-logo {
   background: transparent url(i/logo-mark.png) no-repeat center;
+  width: 160px;
+  height: 160px;
+  margin-bottom: 10px;
   background-size: cover;
-  float: left;
-  position: relative;
-  width: 84px;
-  height: 84px;
-  left: -3px;
-  margin-bottom: 15px;
 }
 .site-name {
+  display:inline-block;
   background: transparent url(i/logo-words.png);
   background-size:cover;
-  float: left;
-  position: relative;
-  width: 323px;
-  height: 52px;
-  top: 19px;
-  left: 8px;
-}
-.page-content {
-  padding: 0 320px 0 0; /* ---> Sidebar width */
-}
-.site-brand {
-  position: relative;
-  top: -5px;
+  width: 160px;
+  height: 25px;
+  padding-bottom: 20px;
 }
 
 /* - SITE NAV */
 
 .site-nav {
-margin-right: 320px;
-float: right;
+margin: 0 320px 20px 180px;
 }
 .site-nav li {
 display: inline-block;
@@ -229,6 +228,15 @@ article.entry h5 {
   
 }
 
+
+
+
+
+
+
+
+
+
 /* - OLD LAYOUT */
 .grid-old .page-content { padding: 0 200px 0 200px; }
 .grid-old .sidebar-right { width: 180px; }  
@@ -240,7 +248,40 @@ article.entry h5 {
 
 @media only screen and (max-width: 950px) {
 
-
+.page-content {
+  padding: 0 320px 0 0; /* ---> Sidebar width */
+}
+.sidebar-left {
+  display: none;
+}
+.sidebar-right {
+top: -125px;
+}
+.site-brand {
+  position: relative;
+  top: -5px;
+}
+.site-logo {
+  float: left;
+  position: relative;
+  left: -3px;
+  width: 84px;
+  height: 84px;
+}
+.site-name {
+  float: left;
+  position: relative;
+  top: 19px;
+  left: 8px;
+  background: transparent url(i/logo-words.png) top left;
+  background-size:cover;
+  width: 323px;
+  height: 52px;
+}
+.site-nav {
+  clear: both;
+  margin: 0 320px 20px 0px;
+}
 
 }
 
