--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ width: 160px;
 .sidebar-left {
 margin-left: -100%;
 right: 180px;
-margin-top: 165px;
 }
 .sidebar-right {
   width: 300px;
@@ -86,9 +85,6 @@ margin-bottom: 20px;
   top: 19px;
   left: 8px;
 }
-.page-content {
-  padding: 0 320px 0 0; /* ---> Sidebar width */
-}
 .site-brand {
   position: relative;
   top: -5px;
@@ -109,19 +105,47 @@ background: rgba(239,234,232,.5);
 
 /* - SIDEBARS */
 
+/* Widgets */
+
 .widget {
 text-align: center;
-padding: 10px 0;
-margin-bottom: 20px;
+padding: .5em;
+margin-bottom: 1em;
 }
-
-/* Widgets */
 .widget {min-height:100px;}
 .widget-ad-tall {min-height:600px;}
 .widget-nav {min-height:750px;}
 .widget-fbs {min-height:150px}
 .widget-ad-house {min-height:250px;}
 .widget-facebook {min-height:350px;}
+
+.widget-nav {
+  text-align: left;
+}
+.widget-nav h4 {
+  padding: .5em;
+  font-weight: bold;
+  background: rgba(255,255,255,.9);
+  margin-bottom: .5em;
+}
+.widget-nav ul {
+  display:none;
+  padding: .5em;
+  margin-bottom: .5em;
+}
+.widget-nav ul li {
+  list-style: square inside;
+}
+.widget-nav .widget-section.active ul {
+  display: block;
+}
+.taxonomy-popular {
+  
+}
+.taxonomy-popular.active h4 {
+  display: none;
+}
+
 
 /* - FOOTER */
 
@@ -241,7 +265,6 @@ article.entry h5 {
 @media only screen and (max-width: 950px) {
 
 
-
 }
 
 @media only screen and (min-width: 1040px) {
@@ -249,9 +272,18 @@ article.entry h5 {
   max-width: 1040px;
   margin: 0 auto;
 }
+
+}
+@media only screen and (max-width: 1350px) {
+.site-nav {
+  float: left;
+  margin-bottom: 2em;
+}  
+.sidebar-right {
+  top: -160px;
+}
 }
 @media only screen and (min-width: 1350px) {
-
 .fullscreen #wrap {
   max-width: 1350px;
 }
@@ -269,7 +301,6 @@ margin: 0 1em 1em 0;
     width: 220px;
     clear: right;
 }
-
 }
 
 
