Removed top breakpoint, widened content column, widened right column

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ padding: 20px;
 /* - FLUID/FLEXIBLE LAYOUT */
 
 .page-content {
+  min-width: 770px;
   padding: 0 350px 0 180px; /* ---> Sidebar width */
 }
 .content-wrap,
@@ -41,7 +42,8 @@ right: 180px;
   width: 330px;
 left: 20px;
 margin-right: -100%;
-top: -100px;
+top: -150px;
+
 }
 
 .site-footer, .widget, .site-search {
@@ -93,8 +95,8 @@ margin-bottom: 20px;
 /* - SITE NAV */
 
 .site-nav {
-margin-right: 335px;
-float: right;
+  margin-bottom: 1.5em;
+clear: both;
 }
 .site-nav li {
 display: inline-block;
@@ -293,101 +295,90 @@ article.entry h5 {
 
 /* = MEDIA QUERIES */
 
+/* == BREAKPOINTS --» 825px » 950px » 1040px  */
+
 @media only screen and (max-width: 950px) {
+  .page-content {
+    padding: 0 350px 0 0;
+  }
+  .site-nav {
+    margin-left: 90px;
+  }
+  .sidebar-left .widget {
+    display: none;
+  }
+  .sidebar-left .widget-nav {
+    display: block;
+  }
+  .widget-nav {
+    display: block;
+    position: absolute;
+    min-height: 0;
+    height: 29px;
+    padding: 4px 10px;
+    top: -50px;
+    left: 180px;
+      border: solid 1px transparent;
+  }
+  .widget-nav:hover {
+box-shadow: 0 2px .5em rgba(0,0,0,.2);
+    background: rgba(255,255,255,1);
+      min-width: 400px;
+      height: auto;
+  }
+  .widget-nav h3 {
+    height: 29px;
+    display: block;
+    cursor: pointer;
+  }
+  .widget-nav h3:after {
+    font-size: .7em;
+    content: "▼";
+    opacity: .3;
+    position: relative;
+    right: -5px;
+  }
+.widget-nav:hover h3 {
+  font-weight: bold;
+  cursor: auto;
+}
+.widget-nav:hover h3:after {
+  content:none;
+}
+  .widget-nav h3:hover:after {
+    opacity: .8;
+  }
+  .widget-nav h4 {
+        background: rgba(128,128,128,.1);
+  }
+  .widget-nav .widget-section {
+    display: none;
+  }
+  .widget-nav:hover .widget-section {
+    display: block;
+  }
 
-.site-nav {
-  margin-left: 90px;
 }
-.sidebar-left .widget {
-  display: none;
-}
-.sidebar-left .widget-nav {
-  display: block;
-}
-.page-content {
-  padding: 0 320px 0 0; /* ---> Sidebar width */
-}
-.widget-nav {
-  display: block;
-  position: absolute;
-  min-height: 0;
-  height: 29px;
-  padding: 4px 10px;
-  top: -57px;
-  left: 180px;
-    border: solid 1px transparent;
-}
-.widget-nav:hover {
-  border: solid 1px #f00;
-  background: rgba(255,255,255,1);
-    min-width: 400px;
-    height: auto;
-}
-
-.widget-nav h3 {
-  height: 29px;
-  display: block;
-  cursor: pointer;
-}
-.widget-nav h3:after {
-  font-size: .7em;
-  content: "▼";
-  opacity: .3;
-  position: relative;
-  right: -5px;
-}
-.widget-nav h3:hover:after {
-  opacity: .8;
-}
-.widget-nav .widget-section {
-  display: none;
-}
-.widget-nav:hover .widget-section {
-  display: block;
-}
-
-}
-
-@media only screen and (min-width: 1040px) {
+@media only screen and (min-width: 1110px) {
 .fullscreen #wrap {
-  max-width: 1040px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 
 }
-@media only screen and (max-width: 1350px) {
-.site-nav {
-  float: left;
-  margin-bottom: 2em;
-}  
-.sidebar-right {
-  top: -160px;
-}
-}
-@media only screen and (min-width: 1351px) {
-.fullscreen #wrap {
-  max-width: 1350px;
-}
-.entry-featured .featured-image,
-.entry-full .featured-image {
-max-width: 450px;
-float: left;
-margin: 0 1em 1em 0;
-}
-.recipe-callout .recipe-method {
-  margin-right: 280px;
-}
-.recipe-callout .recipe-ingredients {
-    float: right;
-    width: 220px;
-    clear: right;
-}
-}
 
+
+/* == TWEAKPOINTS */
+
+@media only screen and (max-width: 900px) {
+  .site-nav li:last-child {
+    display:none;
+  }
+}
 
 @media only screen and (max-width: 768px) {   /* ALERT BELOW ACCEPTABLE WIDTH */
-.fullscreen #wrap * {
-  background-color: #900;
-  color: #f00;
-}
+  .fullscreen #wrap * {
+    background-color: #900;
+    color: #f00;
+  }
 }
