--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ padding: 20px;
 
 /* - FLUID/FLEXIBLE LAYOUT */
 
+.fullscreen #wrap {
+  min-width: 768px;
+  max-width: 1110px;
+  margin: 0 auto;
+}
 .page-content {
   min-width: 770px;
   padding: 0 350px 0 180px; /* ---> Sidebar width */
@@ -52,9 +57,6 @@ top: -150px;
 
 /* - GLOBAL */
 
-#wrap { 
- min-width: 768px;
-}
 b, strong { font-weight: bold; }
 i, em { font-style: italic; }
 
@@ -286,30 +288,20 @@ article.entry h5 {
   
 }
 
-/* - OLD LAYOUT */
-.grid-old .page-content { padding: 0 200px 0 200px; }
-.grid-old .sidebar-right { width: 180px; }  
-.grid-old .site-brand {width: 60%;}
-.grid-old .site-search { float: right; width: 38%;}
-.grid-old .site-nav { clear: both; margin: 0 0 20px 0; }
-
 /* = MEDIA QUERIES */
 
-/* == BREAKPOINTS --» 825px » 950px » 1040px  */
+/* == BREAKPOINTS --» 850px » 950px » 1040px  */
 
 @media only screen and (max-width: 950px) {
-  .page-content {
-    padding: 0 350px 0 0;
-  }
-  .site-nav {
-    margin-left: 90px;
-  }
-  .sidebar-left .widget {
-    display: none;
-  }
-  .sidebar-left .widget-nav {
-    display: block;
-  }
+  .page-content { padding: 0 200px 0 180px; }
+  .sidebar-right { width: 180px; }
+}
+
+@media only screen and (max-width: 850px) {
+  .page-content { padding: 0 200px 0 0; }
+  .site-nav { margin-left: 90px; }
+  .sidebar-left .widget { display: none; }
+  .sidebar-left .widget-nav { display: block; }
   .widget-nav {
     display: block;
     position: absolute;
@@ -359,14 +351,12 @@ box-shadow: 0 2px .5em rgba(0,0,0,.2);
   }
 
 }
-@media only screen and (min-width: 1110px) {
-.fullscreen #wrap {
-  max-width: 1110px;
-  margin: 0 auto;
+@media only screen and (min-width: 1210px) {
+  .fullscreen #wrap { max-width: 1150px; }
+  .page-content { padding: 0 370px 0 200px; }
+  .sidebar-left { right: 200px; }
+  .sidebar-right { left: 40px; }  
 }
-
-}
-
 
 /* == TWEAKPOINTS */
 
