--- a/style.css
+++ b/style.css
@@ -288,8 +288,14 @@ article.entry h5 {
 
 /* = MEDIA QUERIES */
 
-/* == BREAKPOINTS --» 850px » 950px » 1040px  */
+/* == BREAKPOINTS --» 768px || 775px || 955px || 1110px  */
 
+@media only screen and (min-width: 1210px) {
+  .fullscreen #wrap { max-width: 1150px; }
+  .page-content { padding: 0 370px 0 200px; }
+  .sidebar-left { right: 200px; }
+  .sidebar-right { left: 40px; }  
+}
 @media only screen and (max-width: 955px) {
   .page-content { padding: 0 180px 0 180px; }
   .sidebar-right { width: 160px; }
@@ -348,12 +354,6 @@ box-shadow: 0 2px .5em rgba(0,0,0,.2);
     display: block;
   }
 
-}
-@media only screen and (min-width: 1210px) {
-  .fullscreen #wrap { max-width: 1150px; }
-  .page-content { padding: 0 370px 0 200px; }
-  .sidebar-left { right: 200px; }
-  .sidebar-right { left: 40px; }  
 }
 @media only screen and (max-width: 768px) {   /* ALERT BELOW ACCEPTABLE WIDTH */
   .fullscreen #wrap {
