--- a/hud.css
+++ b/hud.css
@@ -53,22 +53,37 @@ margin-left: 15px;
 #select-template h3 {
   width: 140px;
   margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 0 10px;
+  cursor: pointer;
+  background: #eee;
+  color: #000;
+  opacity: .7;
+  border:solid 1px #ccc;
+}
+#select-template h3:after {
+  font-size: .8em;
+  content: "▼";
+  float: right;
+  opacity: .3;
+  position: relative;
+  top: 1px;
 }
 #select-template:hover h3 {
-  font-weight: bold;
+  border-radius: 0;
 }
 #select-template ul {
+  font-size: .9em;
 display: none;
-  width: 120px;
+  width: 130px;
   position: absolute;
   background: #fff;
-  top: 30px;
-  left: 0;
-background: rgba(238,238,238,1);
+  top: 22px;
+  left: 15px;
+background: rgba(238,238,238,.98);
 padding: 15px;
-border: solid 1px #999;
+border:solid 1px #ccc;
 border-top: 0;
-border-left: 0;
 }
 
 #select-template:hover ul {
